--- a/styles.css
+++ b/styles.css
@@ -3,17 +3,20 @@ body, html{
     padding: 0;
     font-family: 'Roboto', sans-serif;
 }
-
+a{
+    text-decoration: none;
+}
 .titulo{
     font-size: 80px;
-    padding-left: 6rem;
-    padding-right: 6rem;
+    padding-left: 8rem;
+    padding-right: 8rem;
     font-weight: 800;
 }
 .img{
-    width: 450px; 
-    height: 380px; 
-    padding-left:8rem;
+    width: 350px; 
+    height: 380px;
+    padding-left: 6rem;
+    padding-right: 6rem;
 }
 .seccionLogin{
     display: flex;
@@ -33,8 +36,8 @@ body, html{
     background-image: url(./src/fondo.png);
     background-repeat: no-repeat;
     padding-bottom: 6rem;
-    padding-right: 15rem;
-    background-size: 80rem 48rem;
+    padding-right: 1rem;
+    background-size: 65rem 48rem;
 }
 
 .formularioInicio{
@@ -49,11 +52,45 @@ label{
 #usuario, #contraseña{
     margin-top: 8px;
     margin-bottom: 10px;
-    padding: 10px;
     border: none;
     border-radius: 10px;
     background-color: #d7d7e9;
 }
+
+#mensaje-usuario, #mensaje-contraseña{
+    font-size: 13.8px;
+    color: #940606;
+    background-color: #7e7b997d;
+    font-weight: 550;
+    margin-bottom: 10px;
+}
+
+a:hover{
+    color: #dddfe0;
+}
+
+.input-container {
+    position: relative;
+    width: 100%;
+    
+}
+
+.input-container i {
+    position: absolute;
+    left: 10px;
+    top: 60%;
+    transform: translateY(-50%);
+    color: rgb(56, 55, 55);
+}
+
+.input-container input{
+    width: 100%;
+    padding: 10px 10px 10px 35px; /* Ajuste del padding para dejar espacio al icono */
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
 .botonIniciar{
     margin-top: 20px;
     color: #ffffff;
@@ -62,24 +99,52 @@ label{
     font-size: 15px;
     padding: 5px;
     cursor: pointer;
+    border: none;
 }
-
-@media (max-width: 1270px){
+.botonRegistro{
+    background-color: #D9D9D9; 
+    color: #6A6363; 
+    text-align: center;
+    margin-top: 20px;
+    border-radius: 10px;
+    font-size: 15px;
+    padding: 5px;
+    cursor: pointer;
+}
+.botonRegistro:hover{
+    color: #000000; 
+    background-color: #bbb4b4;
+}
+.botonIniciar:hover{
+    background-color: rgb(4, 70, 4);
+    color: #ffffff;
+    border: none;
+}
+@media (max-width: 1120px){
+    .img{
+        width: 300px; 
+        height: 280px;
+        padding: 0;
+    }
     .seccionLogin{
         display: block;
         justify-content: center;
         align-items: center;
     }
     .titulo{
-        font-size: 80px;
-        padding-left: 10rem;
+        padding: 0;
+        font-size: 4rem;
         text-align: center;
-        font-weight: 600;
+        font-weight: 650;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
     }
   
     .logo{
         background-image: none;
         padding-bottom: 6rem;
+        padding-left: 5rem;
         text-align: center;
         
     }
@@ -90,7 +155,7 @@ label{
     .login{
         background-image: url(./src/fondo1.png);
         background-repeat: no-repeat;
-        background-size: cover;
+        background-size: contain;
         padding-bottom: 6rem;
         display: flex;
         justify-content: center;
@@ -99,21 +164,36 @@ label{
 
 
 }
-
+@media(max-width: 480px){
+    .logo{
+        background-image: none;
+        padding-bottom: 6rem;
+        padding-left: 2rem;
+        text-align: center;
+        
+    }
+    .titulo{
+        padding: 0;
+        font-size: 3.8rem;
+        text-align: center;
+        font-weight: 650;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+    }
+}
 /*---------------------------------------------------------------*/
 footer {
     position: relative;
-    display: flex;
-    padding: 0 8rem 0 8rem;
-    justify-content: space-between;
+    display: block;
+    padding: 5px 8rem 20px 8rem;
     background-color: #1f1f31;
     color: #adb5bd;
     text-align: center;
     font-size: 14px;
-    
     align-items: center;
     font-family: "Poppins", sans-serif;
-    padding-bottom: 20px;
+    
 }
 
 footer a {
@@ -121,103 +201,9 @@ footer a {
 }
 
 
-.titulo-contacto {
-    font-size: 18px;
-    text-align: left;
-}
-
 .footer_texto1 {
     border: 1px #adb5bd solid;
     padding: 5px;
 }
 
-.formulario-de-contacto {
-    display: flex;
-    flex-direction: column;
-    font-family: "Poppins", sans-serif;
-    color: #adb5bd;
-}
-
-.formulario-de-contacto ::placeholder {
-    font-family: "Poppins", sans-serif;
-    color: black;
-}
-
-.formulario-de-contacto label {
-    margin-top: 5px;
-    font-size: 13px;
-    text-align: justify;
-
-}
-
-.formulario-de-contacto #nombre-footer {
-    margin-top: 5px;
-    margin-bottom: 10px;
-    padding: 10px;
-    border: none;
-    border: 2px solid #303644;
-    background-color: #d7d7e9;
-    width: 250px;
-
-}
-
-.formulario-de-contacto #correo-footer {
-    margin-top: 5px;
-    margin-bottom: 10px;
-    padding: 10px;
-    border: none;
-    border: 2px solid #303644;
-    background-color: #d7d7e9;
-    width: 250px;
-
-}
-
-.formulario-de-contacto textarea {
-    margin-top: 5px;
-    margin-bottom: 10px;
-    width: 300px;
-    font-family: "Poppins", sans-serif;
-    border: 2px solid #303644;
-    background-color: #d7d7e9;
-}
-
-
-.formulario-de-contacto #submit-footer {
-    width: 120px;
-    height: 35px;
-    color: #ffffff;
-    background-color: #17a1a3;
-    border: none;
-    border-radius: 10px;
-    font-size: 14px;
-    padding: 4px;
-    cursor: pointer;
-    transition: 0.4s;
-    font-family: "Poppins", sans-serif;
-}
-
-.formulario-de-contacto #submit-footer:hover {
-    background-color: #067c4f;
-}
-
-
-.formulario-de-contacto #nombre-footer {
-    padding: 10px 20px 5px 35px;
-    background-position: left center;
-}
-
-.formulario-de-contacto #correo-footer {
-    padding: 10px 20px 5px 35px;
-    background-position: left center;
-}
-
-
-#mensaje-nombre-footer,
-#mensaje-correo-footer,
-#mensaje-comentario-footer {
-    font-size: 12px;
-    color: #940606;
-    background-color: #7e7b997d;
-    font-weight: 550;
-}
 /*-------------------------------------------------------------------*/
