--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,7 @@ a:hover{
 
     }
     .login{
-        background-image: url(./src/fondo1.png);
+        background-image: url(./src/fondo2.jpg);
         background-repeat: no-repeat;
         background-size: contain;
         padding-bottom: 6rem;
